# hzmoria

./: .gitignore  CMakeLists.txt  README.md  umoria.txt
files/: MORIA.CNF  news  version.hlp
files/docs/: README.txt  history.txt
source/: config.h  cp437utf.c  create.c  creature.c  death.c  desc.c  dungeon.c  eat.c  externs.h  files.c  generate.c  help.c  hzbool.h  io.c  magic.c  main.c  misc1.c  misc2.c  misc3.c  misc4.c  monsters.c  moria1.c  moria2.c  moria3.c  moria4.c  ms_misc.c  player.c  potions.c  prayer.c  recall.c  rnd.c  save.c  scrolls.c  sets.c  signals.c  spells.c  staffs.c  store1.c  store2.c  tables.c  (+5 more)
